# mcp-browser

./: .env.example  README.md  browser_server.py  pyproject.toml
tests/: test_browser_server.py
