[project]
name = "mcp-browser"
version = "0.1.0"
description = "MCP server for web browsing and search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp",
    "gpt-oss",
]

[tool.uv.sources]
gpt-oss = { path = "../../", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
